# projeto_as_app_gestao_escritorio_adv

./: README.md  ex.py  index.py  pyproject.toml  sistema.db  sql_beta.py
components/: home.py  modal_advogados.py  modal_novo_advogado.py  modal_novo_processo.py  sidebar.py
